--- a/app-android/app/src/main/res/layout/fragment_home.xml
+++ b/app-android/app/src/main/res/layout/fragment_home.xml
@@ -1,43 +1,51 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="br.com.nome.flashmind.ui.fragments.HomeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="16dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@color/colorAccent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="16dp">
+
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@color/colorAccent" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="@string/LABEL_DECKS" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvDecks"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="@string/LABEL_LAST_DECKS" />
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvLastDecks"
+            android:nestedScrollingEnabled="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="@string/LABEL_DECKS" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvDecks"
-        android:layout_width="match_parent"
-        android:layout_height="100dp" />
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="@string/LABEL_LAST_DECKS" />
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvLastDecks"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+</ScrollView>
