--- a/app-android/app/src/main/res/layout/fragment_my_decks.xml
+++ b/app-android/app/src/main/res/layout/fragment_my_decks.xml
@@ -1,8 +1,16 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="br.com.nome.flashmind.ui.fragments.MyDecksFragment">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvDecks"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:drawSelectorOnTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-</FrameLayout>
+</LinearLayout>
