--- a/app-android/app/src/main/res/layout/dialog_deck_option.xml
+++ b/app-android/app/src/main/res/layout/dialog_deck_option.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/ivDeckBackground"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:src="@color/colorPrimaryDark" />
 
+    <ImageButton
+        android:id="@+id/btnShare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="8dp"
+        android:src="@android:drawable/ic_menu_share" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/ivDeckBackground"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -51,4 +62,4 @@
             android:text="@string/LABEL_PLAY_COUNT" />
 
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
