CHORE: Added main fragments, added create deck activity

--- a/app-android/app/src/main/res/layout/content_main.xml
+++ b/app-android/app/src/main/res/layout/content_main.xml
@@ -18,10 +18,10 @@
     <com.luseen.spacenavigation.SpaceNavigationView
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:active_item_color="@color/colorAccent"
-        app:centre_button_color="@color/centre_button_color"
-        app:inactive_item_color="@color/colorAccent"
+        android:layout_height="60dp"
+        app:active_item_color="@color/space_white"
+        app:centre_button_color="@color/colorPrimaryDark"
+        app:inactive_item_color="@color/space_white"
         app:space_background_color="@color/colorPrimary"
         app:centre_button_icon="@drawable/near_me"
         app:space_item_icon_size="@dimen/space_item_icon_default_size"
