--- a/app-android/app/src/main/res/values/dimens.xml
+++ b/app-android/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="textMediumSize">18sp</dimen>
+    <dimen name="grid_layout_margin">8dp</dimen>
 </resources>
