--- a/app-android/app/src/main/res/layout/fragment_my_decks.xml
+++ b/app-android/app/src/main/res/layout/fragment_my_decks.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="@color/colorBackground"
     android:layout_height="match_parent"
     tools:context="br.com.nome.flashmind.ui.fragments.MyDecksFragment">
 
