--- a/app-android/app/src/main/res/layout/recycler_grid_deck_item.xml
+++ b/app-android/app/src/main/res/layout/recycler_grid_deck_item.xml
@@ -2,39 +2,60 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
+    android:background="@color/space_white"
     android:gravity="center"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="110dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:layout_height="110dp"
-        android:layout_gravity="center"
-        android:background="@drawable/white_ripple_primary_color_stroke"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="4dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:padding="26dp"
+            android:src="@drawable/ic_plus" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvDeckName"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:text="@string/app_name"
+        android:textColor="@color/textColorPrimaryDark"
+        android:textSize="16sp" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:alpha="0.25"
+        android:background="@color/textColorPrimaryDark" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:padding="8dp"
+            android:src="@drawable/near_me"
+            android:tint="@android:color/darker_gray" />
 
         <TextView
             android:id="@+id/tvDeckCount"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:padding="8sp"
+            android:padding="16sp"
             android:text="@string/LABEL_EMPTY_DECK_COUNT"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/textColorPrimaryDark" />
 
-
-        <TextView
-            android:id="@+id/tvDeckName"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="4dp"
-            android:gravity="bottom|center"
-            android:text="@string/app_name"
-            android:textColor="@color/colorPrimary"
-            android:textSize="16sp" />
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 </LinearLayout>
