--- a/app-android/app/src/main/res/layout/recycler_grid_new_deck_item.xml
+++ b/app-android/app/src/main/res/layout/recycler_grid_new_deck_item.xml
@@ -1,24 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:clickable="true"
+    android:layout_height="140dp"
+    android:background="@color/colorPrimaryDark"
     android:gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/white_ripple_primary_color_stroke"
-        android:orientation="vertical">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:padding="36dp"
-            android:src="@drawable/ic_plus"
-            android:tint="@color/colorPrimary" />
-    </LinearLayout>
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/ic_plus" />
 
 </LinearLayout>
