--- a/app-android/app/src/main/res/values/colors.xml
+++ b/app-android/app/src/main/res/values/colors.xml
@@ -1,7 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#27B1BE</color>
+    <color name="colorPrimaryDark">#168993</color>
+    <color name="colorAccent">#757575</color>
     <color name="no_connection_yellow">#FFEB3B</color>
+    <color name="colorBackground">#ECEFF1</color>
+    <color name="textColorPrimaryDark">#525661</color>
+    <color name="textColorDarkBackground">#FFFFFF</color>
+    <color name="textColorPrimaryLight">#90A4AE</color>
+
+    <color name="badge_background_color">#f44336</color>
+    <color name="centre_button_color">#4285F4</color>
+    <color name="colorBackgroundHighlightWhite">#8dffffff</color>
+    <color name="default_active_item_color">#262626</color>
+    <color name="default_inactive_item_color">#9e9e9e</color>
+    <color name="selected_item_color">#3fffffff</color>
+    <color name="space_background_color">#757575</color>
+    <color name="space_default_color">#2A3137</color>
+    <color name="space_transparent">#00000000</color>
+    <color name="space_white">#ffffff</color>
+    <color name="white_with_alpha">#bfffffff</color>
 </resources>
