--- a/app-android/app/src/main/res/menu/create_deck_image_menu.xml
+++ b/app-android/app/src/main/res/menu/create_deck_image_menu.xml
@@ -12,4 +12,9 @@
         android:icon="@drawable/ic_image_white_24dp"
         android:title="@string/MENU_CHANGE_IMAGE"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/add"
+        android:icon="@drawable/near_me"
+        android:title="@string/MENU_ADD_CARD"
+        app:showAsAction="always" />
 </menu>
