--- a/app-android/app/src/main/res/layout/content_create_deck.xml
+++ b/app-android/app/src/main/res/layout/content_create_deck.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_marginTop="8dp"
             android:paddingBottom="8dp">
 
             <ImageView
